--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "test-case",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "packageManager": "yarn@3.1.1",
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "esbuild": "~0.14.1",
-    "esbuild-sass-plugin": "~1.8.0"
+    "esbuild": "~0.14.6",
+    "esbuild-sass-plugin": "~2.0.0-alpha.1"
   },
   "author": "",
   "license": "ISC"
